2024-12-03T01:21:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12131103084 # 498
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-03
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 713 1184 / 714 1185
* notice: next accum: outdated-unq outdated-all / unq all: 713 1184 / 715 1186
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-02]

2024-11-30T01:18:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12092347957 # 495
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-30
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 712 1183 / 713 1184
* notice: next accum: outdated-unq outdated-all / unq all: 713 1184 / 714 1185
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-11-14] / [2024-11-29]

2024-11-17T01:22:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11874785141 # 482
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-17
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 711 1182 / 713 1184
* notice: next accum: outdated-unq outdated-all / unq all: 712 1183 / 713 1184
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-03] / []

2024-11-15T01:19:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11848459945 # 480