@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-03T01:21:37Z",
+  "timestamp" : "2024-12-09T01:23:47Z",
   "count_outdated" : 1184,
   "uniques_outdated" : 713,
-  "count" : 1186,
-  "uniques" : 715,
+  "count" : 1187,
+  "uniques" : 716,
   "clones" : [
     {
       "timestamp": "2024-11-29T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-12-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
