@@ -1,3 +1,12 @@
+2024-12-09T01:23:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12227169113 # 504
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-09
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 713 1184 / 715 1186
+* notice: next accum: outdated-unq outdated-all / unq all: 713 1184 / 716 1187
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-08]
+
 2024-12-03T01:21:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12131103084 # 498
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-03
